--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -31,8 +31,13 @@ button.edit {
   background-color: white;
 }
 
-.nav-link:active, :hover{
-  color: black;
+.nav-link {
+  color: #262626;
+  font-family: 'Lato', sans-serif;
+}
+
+.nav-link:hover, a, a:hover {
+  color: #336699;
 }
 
 .title {
@@ -64,4 +69,42 @@ button.edit {
 
 .jumbotron {
   text-align: center;
+  margin-top: 50px;
+  background-color: #262626;
+  color: #f6f4ef;
+}
+
+#homePic {
+  max-width: 100%;
+  max-height: 80%;
+  top: 0;
+}
+
+img {
+  width: 100%;
+  height: 70%;
+}
+
+.select {
+  margin-bottom: 20px;
+}
+
+.card2 {
+  background-color: #1d3c63;
+  color: white;
+  border: none;
+}
+
+.boxes {
+  margin-top: -10px;
+  font-size: 30px;
+}
+
+.box1, .box1:hover {
+  background-color: #ff7082;
+  color: #262626;
+}
+
+.box2 {
+  background-color: #f6f4ef;
 }
